# Candy-NLP

./: .gitignore  CMakeLists.txt  README.md
Foundation/: CMakeLists.txt
Foundation/include/Candy-NLP/: Candy-NLP.h
Foundation/src/: Candy-NLP.cpp
Foundation/tests/: CMakeLists.txt  main.cpp
